--- a/resources/css/custom/_chart.css
+++ b/resources/css/custom/_chart.css
@@ -5,76 +5,78 @@ _apexchart.css
 */
 
 .apex-charts {
-  min-height: 10px !important;
+    min-height: 10px !important;
 }
 
 .apexcharts-canvas {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 .apexcharts-radialbar-hollow {
-  @apply fill-card;
+    @apply fill-card;
 }
 
 .apexcharts-canvas .apexcharts-text.apexcharts-xaxis-label,
 .apexcharts-canvas .apexcharts-text.apexcharts-yaxis-label,
 .apexcharts-canvas .apexcharts-title-text {
-  @apply fill-default-900 bg-default-50;
+    @apply fill-default-900 bg-default-50;
 }
 
 .apexcharts-canvas .apexcharts-tooltip.apexcharts-theme-light,
 .apexcharts-canvas .apexcharts-xaxistooltip.apexcharts-theme-light {
-  @apply shadow-none rounded-lg border border-default-300/10 bg-default-500/10 backdrop-blur-[100px];
+    @apply shadow-none rounded-lg border border-default-300/10 bg-default-500/10 backdrop-blur-[100px];
 }
 
 .apexcharts-canvas .apexcharts-xaxistooltip-bottom:after,
 .apexcharts-canvas .apexcharts-xaxistooltip-bottom:before {
-  @apply border-b-default-200 border-dashed;
+    @apply border-b-default-200 border-dashed;
 }
 
 .apexcharts-canvas .apexcharts-tooltip-series-group.apexcharts-active {
-  @apply text-body-color px-4 gap-2 font-semibold;
+    @apply text-body-color px-4 gap-2 font-semibold;
 }
 
 .apexcharts-tooltip-y-group {
-  @apply font-medium;
+    @apply font-medium;
 }
 
-.apexcharts-canvas .apexcharts-tooltip.apexcharts-theme-light .apexcharts-tooltip-title {
-  @apply px-4 py-2 mb-2 text-sm text-center border-default-400/20 border-dashed bg-default-200/10 backdrop-blur-[100px];
+.apexcharts-canvas
+    .apexcharts-tooltip.apexcharts-theme-light
+    .apexcharts-tooltip-title {
+    @apply px-4 py-2 mb-2 text-sm text-center border-default-400/20 border-dashed bg-default-200/10 backdrop-blur-[100px];
 }
 
 .apexcharts-grid-borders line,
 .apexcharts-gridline {
-  @apply stroke-default-200;
+    @apply stroke-default-200;
 }
 
 .apexcharts-legend-series {
-  @apply font-semibold;
+    @apply font-semibold;
 }
 
 .apexcharts-legend-text {
-  @apply !text-default-700;
-  font-size: 13px !important;
-  vertical-align: middle;
+    @apply !text-default-700;
+    font-size: 13px !important;
+    vertical-align: middle;
 }
 
 .apexcharts-legend-marker {
-  vertical-align: middle;
-  margin-right: 5px !important;
+    vertical-align: middle;
+    margin-right: 5px !important;
 }
 
 .apexcharts-pie-label {
-  @apply fill-card;
+    @apply fill-card;
 }
 
 .apexcharts-text.apexcharts-yaxis-title-text {
-  @apply fill-default-600;
+    @apply fill-default-600;
 }
 
 .apexcharts-xaxis line,
 .apexcharts-xaxis-tick {
-  @apply stroke-default-400;
+    @apply stroke-default-400;
 }
 
 .apex-charts text,
@@ -88,13 +90,13 @@ _apexchart.css
 .apexcharts-legend-text,
 .apexcharts-subtitle-text,
 .apexcharts-tooltip {
-  @apply text-default-900 !font-body font-medium;
+    @apply text-default-900 !font-body font-medium;
 }
 
 .apexcharts-radialbar-track path {
-  @apply stroke-default-200;
+    @apply stroke-default-200;
 }
 
 .apexcharts-treemap-series rect {
-  @apply stroke-card;
+    @apply stroke-card;
 }
