--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,22 +6,22 @@ Contact: themesdesign.in@gmail.com
 */
 
 /* Google Font Link */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import 'flatpickr/dist/flatpickr.min.css';
+@import "flatpickr/dist/flatpickr.min.css";
 
 /* ========= Tailwind CSS ========= */
-@import 'tailwindcss';
+@import "tailwindcss";
 
 /* ========= Themes Config ========= */
-@import './themes.css';
+@import "./themes.css";
 
 /* ========= Preline UI ========= */
 /* @source "preline/dist/*.js"; */
 
-@import 'preline/variants.css';
+@import "preline/variants.css";
 @source "preline/dist.js";
 
 /* ========= Tailwind Plugin ========= */
@@ -30,22 +30,22 @@ Contact: themesdesign.in@gmail.com
 
 /* ========= Cutsome CSS ========= */
 
-@import './structure/_general.css';
-@import './structure/_sidenav.css';
-@import './structure/_topbar.css';
+@import "./structure/_general.css";
+@import "./structure/_sidenav.css";
+@import "./structure/_topbar.css";
 
 /* Custome Components */
-@import './custom/_reboot.css';
-@import './custom/_helper.css';
-@import './custom/_buttons.css';
-@import './custom/_card.css';
-@import './custom/_dropdown.css';
-@import './custom/_forms.css';
-@import './custom/_print.css';
-@import './custom/_chart.css';
+@import "./custom/_reboot.css";
+@import "./custom/_helper.css";
+@import "./custom/_buttons.css";
+@import "./custom/_card.css";
+@import "./custom/_dropdown.css";
+@import "./custom/_forms.css";
+@import "./custom/_print.css";
+@import "./custom/_chart.css";
 
 /* Simplebar */
-@import './custom/_simplebar.css';
+@import "./custom/_simplebar.css";
 
 /* Calendar */
-@import './custom/_calendar.css';
+@import "./custom/_calendar.css";
